# new_frontiers

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: AppDesc.hh  AppDesc.hxx  CMakeLists.txt  Controls.hh  Controls.hxx  CoordinateFrames.cc  CoordinateFrames.hh  CoordinateFrames.hxx  Entity.cc  Entity.hh  Entity.hxx  HostileMob.cc  HostileMob.hh  HostileMob.hxx  IsometricApp.cc  IsometricApp.hh  IsometricApp.hxx  LocationUtils.hh  LocationUtils.hxx  NewFrontiersApp.cc  NewFrontiersApp.hh  NewFrontiersApp.hxx  PGEApp.cc  PGEApp.hh  PGEApp.hxx  Player.cc  Player.hh  Player.hxx  RNG.cc  RNG.hh  RNG.hxx  SolidElement.cc  SolidElement.hh  SolidElement.hxx  SolidWall.hh  SolidWall.hxx  Spawner.cc  Spawner.hh  Spawner.hxx  Teleporter.cc  (+25 more)
src/app/: CMakeLists.txt  ColorGenerator.cc  ColorGenerator.hh  ColorGenerator.hxx  IsometricApp.cc  IsometricApp.hh  IsometricApp.hxx  TopViewApp.cc  TopViewApp.hh  TopViewApp.hxx
src/coordinates/: CellLocation.hh  CoordinateFrame.cc  CoordinateFrame.hh  CoordinateFrame.hxx  IsometricFrame.hh  IsometricFrame.hxx  TopViewFrame.hh  TopViewFrame.hxx  Viewport.hh
src/ui/: Action.cc  Action.hh  Action.hxx  BackgroundDesc.hh  BackgroundDesc.hxx  BlockAction.hh  BlockAction.hxx  BlockMenu.hh  BlockMenu.hxx  CMakeLists.txt  ColorUtils.hh  ColorUtils.hxx  EntityAction.hh  EntityAction.hxx  EntityMenu.hh  EntityMenu.hxx  GameMenu.cc  GameMenu.hh  GameMenu.hxx  Menu.cc  Menu.hh  Menu.hxx  MenuContentDesc.hh  MenuContentDesc.hxx  VFXAction.hh  VFXAction.hxx  VFXMenu.hh  VFXMenu.hxx
src/world/: CMakeLists.txt  Controls.hh  Element.hh  Element.hxx  Influence.cc  Influence.hh  Influence.hxx  Iterators.cc  Iterators.hh  Iterators.hxx  Locator.cc  Locator.hh  Locator.hxx  PlayerControls.hh  Point.hh  Point.hxx  RNG.hh  RNG.hxx  StepInfo.cc  StepInfo.hh  StepInfo.hxx  Tiles.hh  Tiles.hxx  World.cc  World.hh  World.hxx  WorldElement.hh  WorldElement.hxx
src/world/blocks/: Block.cc  Block.hh  Block.hxx  BlockFactory.cc  BlockFactory.hh  BlockFactory.hxx  CMakeLists.txt  Deposit.cc  Deposit.hh  Deposit.hxx  Spawner.cc  Spawner.hh  Spawner.hxx  SpawnerOMeter.cc  SpawnerOMeter.hh  SpawnerOMeter.hxx  TimedSpawner.cc  TimedSpawner.hh  TimedSpawner.hxx
src/world/colonies/: CMakeLists.txt  (+6 more)
(+49 files in other folders)
